website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.0.1/guides/markdown-features/markdown-features-code-blocks.mdx
---
id: code-blocks
description: Handling code blocks in Docusaurus Markdown
slug: /markdown-features/code-blocks
---

# 程式碼區塊

import BrowserWindow from '@site/src/components/BrowserWindow';
import CodeBlock from '@theme/CodeBlock';

文件中的程式碼區塊擁有超強功能 💪。

## 程式碼標題 {#code-title}

您可以在語言後方添加 `title` 鍵值來為程式碼區塊添加標題（需在語言與標題間保留空格）。

````md
```jsx title="/src/components/HelloCodeTitle.js"
function HelloCodeTitle(props) {
  return <h1>Hello, {props.name}</h1>;
}
```
````

```mdx-code-block
<BrowserWindow>
```

```jsx title="/src/components/HelloCodeTitle.js"
function HelloCodeTitle(props) {
  return <h1>Hello, {props.name}</h1>;
}
```

```mdx-code-block
</BrowserWindow>
```

## 語法高亮 {#syntax-highlighting}

程式碼區塊是由三個反引號包圍的文字區塊。您可查閱 [MDX 規範](https://github.com/mdx-js/specification)了解詳細格式標準。

````md
```js
console.log('Every repo must come with a mascot.');
```
````

為程式碼區塊使用對應的語言元字串，Docusaurus 將自動啟用語法高亮功能，此功能由 [Prism React Renderer](https://github.com/FormidableLabs/prism-react-renderer) 提供支援。

<BrowserWindow>

```js
console.log('Every repo must come with a mascot.');
```

</BrowserWindow>

### 主題設定 {#theming}

預設情況下，我們使用的 Prism [語法高亮主題](https://github.com/FormidableLabs/prism-react-renderer#theming)是 [Palenight](https://github.com/FormidableLabs/prism-react-renderer/blob/master/packages/prism-react-renderer/src/themes/palenight.ts)。您可透過在 docusaurus.config.js 的 `themeConfig` 中傳遞 `prism` 的 `theme` 欄位來切換其他主題。

例如，若您偏好使用 `dracula` 高亮主題：

```js title="docusaurus.config.js"
import {themes as prismThemes} from 'prism-react-renderer';

export default {
  themeConfig: {
    prism: {
      // highlight-next-line
      theme: prismThemes.dracula,
    },
  },
};
```

由於 Prism 主題本質上是 JS 物件，若不滿意預設主題，您亦可自行編寫主題。Docusaurus 增強了 `github` 和 `vsDark` 主題以提供更豐富的高亮效果，您可參考我們針對 [淺色](https://github.com/facebook/docusaurus/blob/main/website/src/utils/prismLight.ts) 與 [深色](https://github.com/facebook/docusaurus/blob/main/website/src/utils/prismDark.ts) 程式碼區塊主題的實作方式。

### 支援語言 {#supported-languages}

Docusaurus 預設內建一組 [常用語言](https://github.com/FormidableLabs/prism-react-renderer/blob/master/packages/generate-prism-languages/index.ts#L9-L23)。

:::warning

部分熱門語言如 Java、C# 或 PHP 預設未啟用。

:::

若要為其他 [Prism 支援語言](https://prismjs.com/#supported-languages)添加語法高亮，請在附加語言陣列中定義它們。

:::note

每個附加語言必須是有效的 Prism 元件名稱。例如 Prism 會將語言 `cs` 映射到 `csharp`，但只有 `prism-csharp.js` 作為 _元件_ 存在，因此您需使用 `additionalLanguages: ['csharp']`。您可查閱 `node_modules/prismjs/components` 目錄了解所有可用元件（語言）。

:::

例如，若要為 PowerShell 語言添加高亮支援：

```js title="docusaurus.config.js"
export default {
  // ...
  themeConfig: {
    prism: {
      // highlight-next-line
      additionalLanguages: ['powershell'],
    },
    // ...
  },
};
```

添加 `additionalLanguages` 後，請重新啟動 Docusaurus。

若要為 Prism 尚未支援的語言添加高亮，您可以替換 `prism-include-languages`：

```bash npm2yarn
npm run swizzle @docusaurus/theme-classic prism-include-languages
```

這將在您的 `src/theme` 資料夾中生成 `prism-include-languages.js`。您可透過編輯此檔案來為自訂語言添加高亮支援：

```js title="src/theme/prism-include-languages.js"
const prismIncludeLanguages = (Prism) => {
  // ...

  additionalLanguages.forEach((lang) => {
    require(`prismjs/components/prism-${lang}`);
  });

  // highlight-next-line
  require('/path/to/your/prism-language-definition');

  // ...
};
```

編寫自訂語言定義時，可參考 [Prism 官方語言定義](https://github.com/PrismJS/prism/tree/master/components)。

當新增自訂語言定義時，您無需將該語言加入 `additionalLanguages` 設定陣列，因為 Docusaurus 僅會在 Prism 提供的語言中查找 `additionalLanguages` 字串。在 `prism-include-languages.js` 中匯入該語言即已足夠。

## 行高亮顯示 {#line-highlighting}

### 使用註解高亮 {#highlighting-with-comments}

您可以使用 `highlight-next-line`、`highlight-start` 和 `highlight-end` 註解來選擇要高亮顯示的行。

````md
```js
function HighlightSomeText(highlight) {
  if (highlight) {
    // highlight-next-line
    return 'This text is highlighted!';
  }

  return 'Nothing highlighted';
}

function HighlightMoreText(highlight) {
  // highlight-start
  if (highlight) {
    return 'This range is highlighted!';
  }
  // highlight-end

  return 'Nothing highlighted';
}
```
````

```mdx-code-block
<BrowserWindow>
```

```js
function HighlightSomeText(highlight) {
  if (highlight) {
    // highlight-next-line
    return 'This text is highlighted!';
  }

  return 'Nothing highlighted';
}

function HighlightMoreText(highlight) {
  // highlight-start
  if (highlight) {
    return 'This range is highlighted!';
  }
  // highlight-end

  return 'Nothing highlighted';
}
```

```mdx-code-block
</BrowserWindow>
```

支援的註解語法：

| Style      | Syntax                   |
| ---------- | ------------------------ |
| C-style    | `/* ... */` and `// ...` |
| JSX-style  | `{/* ... */}`            |
| Bash-style | `# ...`                  |
| HTML-style | `<!-- ... -->`           |

我們會盡力根據語言推斷應使用哪組註解樣式，預設允許使用所有註解樣式。如果有目前不支援的註解樣式，我們樂意新增它們！歡迎提交 Pull Request。請注意，不同的註解樣式沒有語意差異，僅內容有別。

您可以在 `src/css/custom.css` 中為高亮程式碼行設定自訂背景色，以更符合您選擇的語法高亮主題。下方給出的顏色適用於預設高亮主題 (Palenight)，若您使用其他主題，則需相應調整顏色。

```css title="/src/css/custom.css"
:root {
  --docusaurus-highlighted-code-line-bg: rgb(72, 77, 91);
}

/* If you have a different syntax highlighting theme for dark mode. */
[data-theme='dark'] {
  /* Color which works with dark mode syntax highlighting theme */
  --docusaurus-highlighted-code-line-bg: rgb(100, 100, 100);
}
```

若您還需要以其他方式樣式化高亮程式碼行，可以針對 `theme-code-block-highlighted-line` CSS 類別進行設定。

### 使用元資料字串高亮 {#highlighting-with-metadata-string}

您也可以在語言元字串中指定要高亮的行範圍（在語言後留一個空格）。要高亮多行，可用逗號分隔行號或使用範圍語法選取多行。此功能使用 `parse-number-range` 函式庫，您可以在其[專案詳情](https://www.npmjs.com/package/parse-numeric-range)中找到更多語法。

````md
```jsx {1,4-6,11}
import React from 'react';

function MyComponent(props) {
  if (props.isBar) {
    return <div>Bar</div>;
  }

  return <div>Foo</div>;
}

export default MyComponent;
```
````

```mdx-code-block
<BrowserWindow>
```

```jsx {1,4-6,11}
import React from 'react';

function MyComponent(props) {
  if (props.isBar) {
    return <div>Bar</div>;
  }

  return <div>Foo</div>;
}

export default MyComponent;
```

```mdx-code-block
</BrowserWindow>
```

:::tip[偏好使用註解]

盡可能優先使用註解進行高亮。透過在程式碼中內嵌高亮標記，當程式碼區塊變長時，您無需手動計算行數。若新增/刪除行，也無需調整行範圍偏移。

````diff
- ```jsx {3}
+ ```jsx {4}
  function HighlightSomeText(highlight) {
    if (highlight) {
+     console.log('Highlighted text found');
      return 'This text is highlighted!';
    }

    return 'Nothing highlighted';
  }
  ```
````

下文將介紹如何擴展魔法註解系統，以定義自訂指令及其功能。僅當不存在高亮元字串時，才會解析魔法註解。

:::

### 自訂魔法註解 {#custom-magic-comments}

`// highlight-next-line` 和 `// highlight-start` 等被稱為「魔法註解」，因為它們會被解析並移除，其目的是為下一行或由開始-結束註解對包圍的區段新增元資料。

您可以透過主題設定宣告自訂魔法註解。例如，您可以註冊另一個新增 `code-block-error-line` 類別名稱的魔法註解：

```mdx-code-block
<Tabs>
<TabItem value="docusaurus.config.js">
```

```js
export default {
  themeConfig: {
    prism: {
      magicComments: [
        // Remember to extend the default highlight class name as well!
        {
          className: 'theme-code-block-highlighted-line',
          line: 'highlight-next-line',
          block: {start: 'highlight-start', end: 'highlight-end'},
        },
        // highlight-start
        {
          className: 'code-block-error-line',
          line: 'This will error',
        },
        // highlight-end
      ],
    },
  },
};
```

```mdx-code-block
</TabItem>
<TabItem value="src/css/custom.css">
```

```css
.code-block-error-line {
  background-color: #ff000020;
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
  border-left: 3px solid #ff000080;
}
```

```mdx-code-block
</TabItem>
<TabItem value="myDoc.md">
```

````md
In JavaScript, trying to access properties on `null` will error.

```js
const name = null;
// This will error
console.log(name.toUpperCase());
// Uncaught TypeError: Cannot read properties of null (reading 'toUpperCase')
```
````

```mdx-code-block
</TabItem>
</Tabs>
```

```mdx-code-block
<BrowserWindow>
```

在 JavaScript 中，嘗試存取 `null` 的屬性會導致錯誤。

```js
const name = null;
// This will error
console.log(name.toUpperCase());
// Uncaught TypeError: Cannot read properties of null (reading 'toUpperCase')
```

```mdx-code-block
</BrowserWindow>
```

若在元數據字串中使用數字範圍語法（如 `{1,3-4}`），Docusaurus 會套用 **第一個 `magicComments` 條目**的類別名稱。預設情況下，此類別名稱為 `theme-code-block-highlighted-line`，但若您變更 `magicComments` 配置並使用不同的條目作為第一個，元數據字串範圍的意義也會隨之改變。

您可透過設定 `magicComments: []` 來停用預設的行高亮註解。若無任何魔法註解配置，但 Docusaurus 遇到包含元數據字串範圍的程式碼區塊時，將會報錯——因為沒有類別名稱可供套用（畢竟高亮類別名稱本質上就是一個魔法註解條目）。

每個魔法註解條目需包含三個鍵值：`className`（必填）、`line`（作用於緊接的下一行）或 `block`（包含 `start` 和 `end`，作用於兩個註解包圍的整個區塊）。

透過 CSS 鎖定類別已能實現許多效果，但您可透過 [swizzling](../../swizzling.mdx) 徹底釋放此功能的潛力。

```bash npm2yarn
npm run swizzle @docusaurus/theme-classic CodeBlock/Line
```

`Line` 元件會接收類別名稱列表，您可據此條件式渲染不同的標記結構。

## 行號顯示 {#line-numbering}

您可在語言元數據字串中加入 `showLineNumbers` 鍵值來啟用程式碼區塊的行號顯示（請注意鍵值前需保留空格）。

````md
```jsx {1,4-6,11} showLineNumbers
import React from 'react';

function MyComponent(props) {
  if (props.isBar) {
    return <div>Bar</div>;
  }

  return <div>Foo</div>;
}

export default MyComponent;
```
````

```mdx-code-block
<BrowserWindow>
```

```jsx {1,4-6,11} showLineNumbers
import React from 'react';

function MyComponent(props) {
  if (props.isBar) {
    return <div>Bar</div>;
  }

  return <div>Foo</div>;
}

export default MyComponent;
```

```mdx-code-block
</BrowserWindow>
```

## 互動式程式碼編輯器 {#interactive-code-editor}

（由 [React Live](https://github.com/FormidableLabs/react-live) 驅動）

您可使用 `@docusaurus/theme-live-codeblock` 外掛建立互動式程式碼編輯器。首先，將此外掛加入您的專案。

```bash npm2yarn
npm install --save @docusaurus/theme-live-codeblock
```

您還需在 `docusaurus.config.js` 中註冊此外掛。

```js {3}
export default {
  // ...
  themes: ['@docusaurus/theme-live-codeblock'],
  // ...
};
```

使用時，請在語言元數據字串後附加 `live` 來建立程式碼區塊。

````md
```jsx live
function Clock(props) {
  const [date, setDate] = useState(new Date());
  useEffect(() => {
    const timerID = setInterval(() => tick(), 1000);

    return function cleanup() {
      clearInterval(timerID);
    };
  });

  function tick() {
    setDate(new Date());
  }

  return (
    <div>
      <h2>It is {date.toLocaleTimeString()}.</h2>
    </div>
  );
}
```
````

該程式碼區塊將被渲染為互動式編輯器，程式碼變更會即時反映在結果面板上。

```mdx-code-block
<BrowserWindow>
```

```jsx live
function Clock(props) {
  const [date, setDate] = useState(new Date());
  useEffect(() => {
    const timerID = setInterval(() => tick(), 1000);

    return function cleanup() {
      clearInterval(timerID);
    };
  });

  function tick() {
    setDate(new Date());
  }

  return (
    <div>
      <h2>It is {date.toLocaleTimeString()}.</h2>
    </div>
  );
}
```

```mdx-code-block
</BrowserWindow>
```

### 導入模組 {#imports}

:::warning[react-live 與導入限制]

無法直接從 react-live 程式碼編輯器導入元件，您必須預先定義可用的導入項目。

:::

預設情況下，所有 React 導入項目皆可用。若需更多導入項目，請透過 swizzle 設定 react-live 作用域：

```bash npm2yarn
npm run swizzle @docusaurus/theme-live-codeblock ReactLiveScope -- --eject
```

```jsx title="src/theme/ReactLiveScope/index.js"
import React from 'react';

// highlight-start
const ButtonExample = (props) => (
  <button
    {...props}
    style={{
      backgroundColor: 'white',
      color: 'black',
      border: 'solid red',
      borderRadius: 20,
      padding: 10,
      cursor: 'pointer',
      ...props.style,
    }}
  />
);
// highlight-end

// Add react-live imports you need here
const ReactLiveScope = {
  React,
  ...React,
  // highlight-next-line
  ButtonExample,
};

export default ReactLiveScope;
```

現在即可使用 `ButtonExample` 元件：

```mdx-code-block
<BrowserWindow>
```

```jsx live
function MyPlayground(props) {
  return (
    <div>
      <ButtonExample onClick={() => alert('hey!')}>Click me</ButtonExample>
    </div>
  );
}
```

```mdx-code-block
</BrowserWindow>
```

### 命令式渲染 (noInline)

當您的程式碼跨越多個元件或變數時，應使用 `noInline` 選項以避免錯誤。

````md
```jsx live noInline
const project = 'Docusaurus';

const Greeting = () => <p>Hello {project}!</p>;

render(<Greeting />);
```
````

與普通互動式程式碼區塊不同，使用 `noInline` 時，React Live 不會將您的程式碼包裹在行內函數中進行渲染。

您需在程式碼結尾明確呼叫 `render()` 來顯示輸出結果。

````mdx-code-block
<BrowserWindow>

```jsx live noInline
const project = "Docusaurus";

const Greeting = () => (
  <p>Hello {project}!</p>
);

render(
  <Greeting />
);
```

</BrowserWindow>
````

## 在程式碼區塊中使用 JSX 標記 {#using-jsx-markup}

Markdown 中的程式碼區塊始終將其內容保留為純文字，這意味著您無法實現如下操作：

```ts
type EditUrlFunction = (params: {
  // This doesn't turn into a link (for good reason!)
  version: <a href="/docs/versioning">Version</a>;
  versionDocsDirPath: string;
  docPath: string;
  permalink: string;
  locale: string;
}) => string | undefined;
```

若想嵌入如錨點連結或粗體等 HTML 標記，可使用 `<pre>` 標籤、`<code>` 標籤或 `<CodeBlock>` 元件。

```jsx
<pre>
  <b>Input: </b>1 2 3 4{'\n'}
  <b>Output: </b>"366300745"{'\n'}
</pre>
```

<BrowserWindow>
  <pre>
    <b>{'Input: '}</b>
    {'1 2 3 4\n'}
    <b>{'Output: '}</b>
    {'"366300745"\n'}
  </pre>
</BrowserWindow>

:::warning[MDX 不受空白字元影響]

MDX 行為與 JSX 一致：即使位於 `<pre>` 內，換行字元仍會被轉為空格。必須明確寫入換行字元才能實際顯示。

:::

:::warning

語法突顯僅適用於純文字字串。若程式碼區塊內容包含 JSX 子元素，Docusaurus 將不會嘗試解析。

:::

## 多語言支援程式碼區塊 {#multi-language-support-code-blocks}

透過 MDX，您可輕鬆在文件中建立互動式元件，例如使用標籤元件切換顯示多種程式語言的程式碼。

我們並未為多語言程式碼區塊實作專用元件，而是在經典主題中提供了通用 [`<Tabs>`](./markdown-features-tabs.mdx) 元件，讓您也能應用於非程式碼情境。

以下範例展示如何在文件中建立多語言程式碼標籤。請注意，各語言區塊上下方的空行是**刻意保留**的，這是 [MDX 目前的限制](./markdown-features-react.mdx#markdown-and-jsx-interoperability)：必須在 Markdown 語法周圍留空行，MDX 解析器才能辨識其為 Markdown 語法而非 JSX。

````jsx
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

<Tabs>
<TabItem value="js" label="JavaScript">

```js
function helloWorld() {
  console.log('Hello, world!');
}
```

</TabItem>
<TabItem value="py" label="Python">

```py
def hello_world():
  print("Hello, world!")
```

</TabItem>
<TabItem value="java" label="Java">

```java
class HelloWorld {
  public static void main(String args[]) {
    System.out.println("Hello, World");
  }
}
```

</TabItem>
</Tabs>
````

您將獲得如下效果：

```mdx-code-block
<BrowserWindow>
<Tabs>
<TabItem value="js" label="JavaScript">
```

```js
function helloWorld() {
  console.log('Hello, world!');
}
```

```mdx-code-block
</TabItem>
<TabItem value="py" label="Python">
```

```py
def hello_world():
  print("Hello, world!")
```

```mdx-code-block
</TabItem>
<TabItem value="java" label="Java">
```

```java
class HelloWorld {
  public static void main(String args[]) {
    System.out.println("Hello, World");
  }
}
```

```mdx-code-block
</TabItem>
</Tabs>
</BrowserWindow>
```

若有多個多語言程式碼標籤需同步選項，請參閱[同步標籤選擇章節](markdown-features-tabs.mdx#syncing-tab-choices)。

### Docusaurus npm2yarn 備註插件 {#npm2yarn-remark-plugin}

同時顯示 npm 與 Yarn 的 CLI 指令是常見需求，例如：

```bash npm2yarn
npm install @docusaurus/remark-plugin-npm2yarn
```

Docusaurus 內建此功能，免去每次使用 `Tabs` 元件的麻煩。啟用前請先安裝 `@docusaurus/remark-plugin-npm2yarn` 套件，並在 `docusaurus.config.js` 中，於需要此功能的外掛（文件、部落格、頁面等）的 `remarkPlugins` 選項註冊。（詳見[文件配置](../../api/plugins/plugin-content-docs.mdx#ex-config)了解配置格式）

```js title="docusaurus.config.js"
export default {
  // ...
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          // highlight-start
          remarkPlugins: [
            [require('@docusaurus/remark-plugin-npm2yarn'), {sync: true}],
          ],
          // highlight-end
        },
        pages: {
          // highlight-next-line
          remarkPlugins: [require('@docusaurus/remark-plugin-npm2yarn')],
        },
        blog: {
          // highlight-start
          remarkPlugins: [
            [
              require('@docusaurus/remark-plugin-npm2yarn'),
              {converters: ['pnpm']},
            ],
          ],
          // highlight-end
          // ...
        },
      },
    ],
  ],
};
```

使用時在程式碼區塊加入 `npm2yarn` 鍵值：

````md
```bash npm2yarn
npm install @docusaurus/remark-plugin-npm2yarn
```
````

#### 配置選項 {#npm2yarn-remark-plugin-configuration}

| Option | Type | Default | Description |
| --- | --- | --- | --- |
| `sync` | `boolean` | `false` | Whether to sync the selected converter across all code blocks. |
| `converters` | `array` | `'yarn'`, `'pnpm'` | The list of converters to use. The order of the converters is important, as the first converter will be used as the default choice. |

## 在 JSX 中使用 {#usage-in-jsx}

在 Markdown 之外，可使用 `@theme/CodeBlock` 元件獲得相同輸出效果。

```jsx
import CodeBlock from '@theme/CodeBlock';

export default function MyReactPage() {
  return (
    <div>
      {/* highlight-start */}
      <CodeBlock
        language="jsx"
        title="/src/components/HelloCodeTitle.js"
        showLineNumbers>
        {`function HelloCodeTitle(props) {
  return <h1>Hello, {props.name}</h1>;
}`}
      </CodeBlock>
      {/* highlight-end */}
    </div>
  );
}
```

```mdx-code-block
<BrowserWindow>
  <CodeBlock
    language="jsx"
    title="/src/components/HelloCodeTitle.js"
    showLineNumbers>
    {`function HelloCodeTitle(props) {
  return <h1>Hello, {props.name}</h1>;
}`}
  </CodeBlock>
</BrowserWindow>
```

接受的屬性包括 `language`、`title` 與 `showLineNumbers`，用法與撰寫 Markdown 程式碼區塊時相同。

雖然不建議，您也可傳入 `metastring` 屬性如 `metastring='{1-2} title="/src/components/HelloCodeTitle.js" showLineNumbers'`，此為 Markdown 程式碼區塊底層處理方式。但建議您[使用註解突顯行號](#highlighting-with-comments)。

如[先前所述](#using-jsx-markup)，語法突顯僅在子元素為純文字字串時才會生效。